<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_blue"
    tools:context=".CreateAccount">
    <androidx.cardview.widget.CardView
        android:layout_centerInParent="true"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="40dp"
        app:cardElevation="20dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_an_account"
                android:padding="16dp"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>
            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:textColor="@color/black"
                android:inputType="textPersonName"
                android:layout_margin="6dp"
                android:background="@drawable/second_view_edit"
                android:padding="16dp"/>
            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:textColor="@color/black"
                android:inputType="textPersonName"
                android:layout_margin="6dp"
                android:background="@drawable/second_view_edit"
                android:padding="16dp"/>
            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:textColor="@color/black"
                android:inputType="phone"
                android:layout_margin="6dp"
                android:background="@drawable/second_view_edit"
                android:padding="16dp"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:layout_margin="6dp"
                android:background="@drawable/second_view_edit"
                android:padding="16dp"
                tools:ignore="InvalidId,TextFields" />
            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:layout_margin="6dp"
                android:background="@drawable/second_view_edit"
                android:padding="16dp"
                tools:ignore="InvalidId,TextFields" />
            <com.google.android.material.button.MaterialButton
                android:backgroundTint="@color/sky_blue_dark"
                android:id="@+id/Login_button"
                android:layout_margin="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:padding="12dp"
                android:textSize="20sp"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginStart="55dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_a_account"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/login_to_login_interface"
                   android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="17sp"/>

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>